# data-structures-in-c

./: .gitignore  CMakeLists.txt  README.md
chapter02/: main.c
chapter03/: array1.c  main.c  malloc.c  malloc2.c  matrix1.c  matrix2.c  polynomial1.c  polynomial2.c  quiz_01.c  quiz_02.c  structure.c  structure.h  swap.c
chapter04/: bracket_checker.c  infix_to_postfix.c  main.c  maze.c  postfix_eval.c  stack_array.c  stack_dynamic_array.c  stack_integer.c  stack_struct_array.c
chapter05/: ADT_Deque.md  ADT_Queue.md  bank_simulation.c  circular_queue.c  circular_queue_sim.c  deque.c  linear_queue.c  main.c
chapter06/: linked_list_array.c  polynomial_linked_list.c  singly_linked_list.c
chapter07/: circular_linked_list.c  doubly_linked_list.c  linked_queue.c  linked_stack.c
chapter08/: binary_search_tree.c  binary_tree.c  expression_tree.c
chapter09/: ADT_Priority_Queue.md  heap.c  heap_sort.c  huffman.c  lpt_scheduling.c
chapter10/: ADT_Graph.md  adj_list.c  adj_matrix.c  bfs_list.c  bfs_matrix.c  dfs_list.c  dfs_matrix.c
chapter11/: dijkstra.c  floyd.c  kruskal.c  prim.c  topological_sort.c
chapter12/: bubble_sort.c  heap_sort_v2.c  insertion_sort.c  merge_sort.c  quick_sort.c  radix_sort.c  selection_sort.c  shell_sort.c
chapter13/: binary_search.c  indexed_sequential_search.c  interpolation_search.c
